--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "next": "^13.5.11",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
